# ApexTran

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  Makefile  README.md  compose.app.yaml  compose.web.yaml  compose.yaml  env.example  pyproject.toml
backend/: __init__.py  __main__.py  _version.py
backend/agent/: agent.py  auth.py  codex_oauth.py  codex_oauth_flow.py  settings.py
backend/app/: framework.py
backend/channels/: __init__.py  base.py  cli.py  manager.py  message.py  renderer.py  telegram.py  web.py
backend/cli/: cli.py
backend/context/: context.py
backend/core/: __init__.py  engine.py  errors.py  events.py  store.py  tape_types.py  tools.py
backend/hooks/: hook_impl.py  hook_runtime.py  hookspecs.py
backend/inventory/: logicfunction.py  postprocess.py  sql.py  vector_dataset.py
backend/llm/: client.py  embedded_tools.py  embedding.py  graph.py  messages.py
backend/memory/: store.py  tape.py
backend/observability/: __init__.py  logging.py
backend/skills/: README.md  __init__.py  skills.py
backend/skills/daily-inventory/: SKILL.md
backend/skills/gh/: SKILL.md
backend/skills/skill-creator/: SKILL.md
backend/skills/skill-creator/scripts/: init_skill.py
backend/skills/telegram/: SKILL.md
backend/skills/telegram/scripts/: telegram_edit.py  telegram_send.py
backend/tools/: tools.py
backend/tools/channeltool/: tool_feishu.py
backend/tools/shelltool/: shell_manager.py
backend/utils/: envelope.py  types.py  utils.py
deploy/nginx/: README.md  apextran.conf
deploy/postgres/init/: 001-init-apextran.sh
docker/: Dockerfile  dockerentry.sh
frontend/: .env.example  README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/public/demo/threads/7f9dc56c-e49c-4671-a3d2-c492ff4dce0c/: thread.json
frontend/scripts/: migrate-auth-db.mjs
frontend/src/: env.js
frontend/src/app/: layout.tsx
frontend/src/app/api/langgraph/[...path]/: route.ts
frontend/src/app/api/market/[...path]/: route.ts
frontend/src/app/workspace/ai-analysis/: page.tsx
frontend/src/app/workspace/dashboard/: page.tsx
frontend/src/app/workspace/long-term-value/: page.tsx
frontend/src/app/workspace/market-analysis/: page.tsx
frontend/src/app/workspace/market-analysis/board-leaders/: page.tsx
frontend/src/app/workspace/market-analysis/dragon-tiger-board/: page.tsx
frontend/src/app/workspace/market-analysis/favorites/: page.tsx
frontend/src/app/workspace/market-analysis/sector-analysis/: page.tsx
frontend/src/app/workspace/market-hotspots/: page.tsx
frontend/src/app/workspace/market-hotspots/flash-news/: page.tsx
frontend/src/app/workspace/market-hotspots/selected-news/: page.tsx
frontend/src/app/workspace/scheduled-tasks/: page.tsx
frontend/src/app/workspace/short-term-trading/: page.tsx
frontend/src/app/workspace/swing-seeking/: page.tsx
frontend/src/components/landing/: footer.tsx  header.tsx  hero.tsx
frontend/src/components/ui/: scroll-area.tsx  sidebar.tsx
frontend/src/components/workspace/: workspace-container.tsx  workspace-header.tsx  workspace-nav-chat-list.tsx  workspace-nav-menu.tsx  workspace-sidebar.tsx
frontend/src/components/workspace/market/: chart-summary.ts  chart-theme.ts  daily-kline-chart.tsx  empty-chart-grid.tsx  index.ts  intraday-chart.tsx  stock-chart-dialog.tsx
frontend/src/components/workspace/settings/: about-content.ts
frontend/src/core/i18n/locales/: en-US.ts  types.ts  zh-CN.ts
frontend/src/core/market/: api.ts  hooks.ts  refs.ts  types.ts  watchlist-cache.ts
frontend/src/core/threads/: hooks.ts
frontend/src/server/better-auth/: config.ts
frontend/src/server/internal-auth/: jwt.ts
frontend/src/styles/: globals.css
frontend/tests/unit/core/market/: api.test.ts  daily-klines.test.ts  watchlist-cache.test.ts
scripts/: start_nginx_stack.sh
services/app/: Dockerfile  README.md  pyproject.toml
services/app/migrations/: 001_market_watchlists.sql  002_market_production_contract.sql  003_market_stock_pool_sync.sql  004_market_stock_snapshots.sql  005_market_quote_metrics.sql
services/app/src/apextran_app/: __init__.py  cli.py  config.py  main.py  worker.py
services/app/src/apextran_app/modules/: __init__.py
services/app/src/apextran_app/modules/_template/: README.md  __init__.py  ingest.py  ports.py  provider.py  router.py  service.py  wiring.py
services/app/src/apextran_app/modules/_template/adapters/: __init__.py  mock_source.py
services/app/src/apextran_app/modules/_template/domain/: __init__.py  models.py
services/app/src/apextran_app/modules/analysis/: __init__.py  provider.py  router.py  schemas.py  service.py  wiring.py
services/app/src/apextran_app/modules/market/: __init__.py  ingest.py  market_ref.py  ports.py  provider.py  repository.py  router.py  service.py  snapshot_repository.py  stock_repository.py  wiring.py
services/app/src/apextran_app/modules/market/adapters/: __init__.py  akshare_source.py  live_source.py  mock_source.py
services/app/src/apextran_app/modules/market/domain/: __init__.py  models.py
services/app/src/apextran_app/shared/: __init__.py  cache.py  db.py  discovery.py  leader.py  metrics.py  ratelimit.py  realtime.py  scheduler.py  security.py  singleflight.py
services/app/src/apextran_app/shared/clients/: __init__.py  agent_client.py
services/app/tests/: test_analysis.py  test_degradation.py  test_live_source.py  test_market.py  test_market_chart_fill.py  test_market_concept.py  test_market_quote_metrics.py  test_market_quote_persistence.py  test_market_repository.py  test_market_stock_repository.py  test_metrics.py  test_realtime.py  test_singleflight.py  test_watchlist_on_add_refresh.py  test_worker.py
tests/: test_builtin_cli.py  test_builtin_hook_impl.py  test_channels.py  test_codex.py  test_envelope.py  test_file_tape_store_entry_ids.py  test_fork_store_merge_back.py  test_framework.py  test_hook_runtime.py  test_image_message.py  test_run_step.py  test_settings.py  test_subagent_tool.py  test_tape_search_output.py  test_tools.py  test_utils.py  test_web_multitenant.py
(+4 files in other folders)
