# ─────────────────────────────────────────────────────────────────────────────
# ApexTran — a hackable, hook-first AI agent for chats and the terminal.
# Packaging: uv + hatchling (version derived from git tags via hatch-vcs).
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "ApexTran"
description = "ApexTran — a hackable, hook-first AI agent that works across the terminal and chat channels."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "Apache-2.0"
authors = [{ name = "lss", email = "liwuhen5788@gmail.com" }]
keywords = ["ai", "agent", "assistant", "llm", "chatbot", "plugins"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Runtime dependencies. Pinned floors only; uv.lock holds the resolved graph.
dependencies = [
    # Core models & config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    # Plugin system & CLI surface
    "pluggy>=1.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # Agent runtime & model access
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "authlib>=1.6",  # Codex OAuth PKCE flow (backend/agent/codex_oauth_flow.py)
    "loguru>=0.7.2",
    "rapidfuzz>=3.14.3",
    # Networking & channels
    "aiohttp>=3.13.3",
    "httpx[socks]>=0.28.1",
    "python-telegram-bot>=21.0",
    "lark-oapi>=1.5.5",
    # Storage & retrieval
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.4.2",
    "langchain-community>=0.4.1",
    "openpyxl",
]

[project.optional-dependencies]
# Optional observability backend.
logfire = ["logfire>=4.31.0"]

[project.scripts]
ApexTran = "backend.__main__:app"

[project.urls]
# TODO: point these at the ApexTran project once it is published.
Repository = "https://github.com/lss/ApexTran"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=0.991",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31",
    "ruff>=0.11.5",
    "prek>=0.3.1",
]

# ─────────────────────────────────────────────────────────────────────────────
# Build backend
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "backend/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["backend", "backend/skills", "tests"]

[tool.hatch.build.targets.wheel]
only-include = ["backend", "backend/skills"]

# ─────────────────────────────────────────────────────────────────────────────
# Tooling
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["backend"]
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
exclude = ["backend/skills/.*/scripts/.*"]

# The inventory domain layer is loosely-typed business logic (dict/SQL/vector
# juggling); type-checking is relaxed here rather than scattering ignores.
[[tool.mypy.overrides]]
module = "backend.inventory.*"
ignore_errors = true

[tool.vulture]
paths = ["backend"]
ignore_names = ["test_*", "Test*"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
extend-exclude = ["backend/skills/**/scripts/*", "backend/_version.py"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff-specific
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "T10",  # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
]
ignore = [
    "E501",   # line length is handled by the formatter
    "E731",   # allow assigning lambdas
    "TRY003", # allow long messages in raised exceptions (CLI/tooling)
    "S603",   # subprocess calls are intentional here
    "RUF001", # ambiguous unicode in strings — intentional CJK text (inventory prompts)
    "RUF002", # ambiguous unicode in docstrings — intentional CJK text
    "RUF003", # ambiguous unicode in comments — intentional CJK text
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]                  # asserts are fine in tests
"backend/inventory/*" = ["S608"]      # SQL built from controlled identifiers; values are bound params

[tool.ruff.format]
preview = true
